# mesh-security

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  codecov.yml  package.json
.cargo/: config
.github/workflows/: basic.yml  coverage.yml  release.yml
.wake/extension/: local-local-chain-34107a19-3937-41f6-b09b-707255fa4f93.json
codegen/: codegen.js
contracts/consumer/band-price-feed/: Cargo.toml
contracts/consumer/band-price-feed/src/: contract.rs  error.rs  ibc.rs  lib.rs  msg.rs  state.rs
contracts/consumer/converter/: Cargo.toml  README.md
contracts/consumer/converter/src/: contract.rs  error.rs  ibc.rs  lib.rs  msg.rs  multitest.rs  price_feed.rs  state.rs
contracts/consumer/converter/src/multitest/: virtual_staking.rs  virtual_staking_mock.rs
contracts/consumer/osmosis-price-feed/: Cargo.toml  README.md
contracts/consumer/osmosis-price-feed/src/: contract.rs  error.rs  ibc.rs  lib.rs  price_keeper.rs  state.rs
contracts/consumer/price-feeders/band-price-feeder/: Cargo.toml  README.md
contracts/consumer/price-feeders/band-price-feeder/examples/: schema.rs
contracts/consumer/price-feeders/band-price-feeder/src/: contract.rs  ibc.rs  lib.rs  msg.rs  state.rs
contracts/consumer/remote-price-feed/: Cargo.toml  README.md
contracts/consumer/remote-price-feed/src/: contract.rs  error.rs  ibc.rs  lib.rs  msg.rs  price_keeper.rs  scheduler.rs  state.rs
contracts/consumer/simple-price-feed/: Cargo.toml  README.md
contracts/consumer/simple-price-feed/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/consumer/virtual-staking/: Cargo.toml  README.md
contracts/consumer/virtual-staking/src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs  types.rs
contracts/external-staking/: Cargo.toml
contracts/external-staking/src/: contract.rs  cross_staking_api.rs  error.rs  lib.rs  msg.rs  multitest.rs  points_alignment.rs  state.rs
contracts/native-staking/: Cargo.toml  README.md
contracts/native-staking-proxy/: Cargo.toml  README.md
contracts/native-staking-proxy/src/: contract.rs  error.rs  interfaces.rs  lib.rs  msg.rs  multitest.rs  types.rs
contracts/native-staking/src/: contract.rs  error.rs  lib.rs  local_staking_api.rs  msg.rs  multitest.rs  native_slashing_callback.rs  state.rs  types.rs
contracts/native-staking/src/multitest/: local_staking_proxy.rs
contracts/osmosis-price-provider/: Cargo.toml
contracts/osmosis-price-provider/src/: contract.rs  error.rs  ibc.rs  state.rs
contracts/provider/external-staking/: Cargo.toml
contracts/provider/external-staking/src/: contract.rs  crdt.rs  error.rs  ibc.rs  lib.rs  msg.rs  multitest.rs  stakes.rs  state.rs  test_methods.rs  test_methods_impl.rs  txs.rs
contracts/provider/external-staking/src/multitest/: utils.rs
contracts/provider/native-staking/: Cargo.toml  README.md
contracts/provider/native-staking-proxy/: Cargo.toml  README.md
contracts/provider/native-staking-proxy/src/: contract.rs  error.rs  lib.rs  mock.rs  msg.rs  multitest.rs  native_staking_callback.rs  state.rs
contracts/provider/native-staking/src/: contract.rs  error.rs  local_staking_api.rs  msg.rs  multitest.rs  native_staking_callback.rs  state.rs
contracts/provider/native-staking/src/multitest/: local_staking_proxy.rs
contracts/provider/vault/: Cargo.toml  README.md
contracts/provider/vault/src/: contract.rs  error.rs  lib.rs  mock.rs  msg.rs  multitest.rs  orch.rs  state.rs  test.rs  txs.rs
contracts/provider/vault/src/contract/: custom.rs
contracts/provider/vault/src/multitest/: cross_staking.rs  local_staking.rs  vault_mock.rs
contracts/vault/: Cargo.toml  README.md
contracts/vault/src/: collateral.rs  contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs  types.rs
contracts/vault/src/multitest/: cross_staking.rs  local_staking.rs
devtools/: build_schemas.sh
docs/: README.md  UseCases.md
docs/consumer/: Consumer.md  Converter.md  GoModule.md  VirtualStaking.md  go_module.md
docs/ibc/: ControlChannel.md  Overview.md  Rewards.md  Serializability.md  Slashing.md  Staking.md  Validators.md
docs/provider/: DAOs.md  ExternalStaking.md  LocalStaking.md  Provider.md  Vault.md
docs/v2/: v2.md
scripts/: build_schemas.sh  optimizer.sh  update_changelog.sh
