[workspace]
members = ["packages/*", "contracts/provider/*", "contracts/consumer/*", "contracts/osmosis-price-provider"]
resolver = "2"

[workspace.package]
edition       = "2021"
version       = "0.9.0"
license       = "MIT"
repository    = "https://github.com/osmosis-labs/mesh-security"

[workspace.dependencies]
mesh-apis        = { path = "./packages/apis" }
mesh-bindings    = { path = "./packages/bindings" }
mesh-burn        = { path = "./packages/burn" }
mesh-sync        = { path = "./packages/sync" }
mesh-virtual-staking-mock = { path = "./packages/virtual-staking-mock" }

mesh-vault    = { path = "./contracts/provider/vault" }
mesh-external-staking    = { path = "./contracts/provider/external-staking" }
mesh-native-staking    = { path = "./contracts/provider/native-staking" }
mesh-native-staking-proxy    = { path = "./contracts/provider/native-staking-proxy" }

mesh-converter    = { path = "./contracts/consumer/converter" }
mesh-simple-price-feed    = { path = "./contracts/consumer/simple-price-feed" }
mesh-virtual-staking    = { path = "./contracts/consumer/virtual-staking" }

sylvia           = "0.8.1"
cosmwasm-schema  = "1.3.3"
cosmwasm-std     = { version = "1.3.3", features = ["ibc3", "cosmwasm_1_3"] }
cw-storage-plus  = "1.1.0"
cw-utils         = "1.0.1"
cw2              = "1.0.1"
osmosis-std      = "0.20.1"
schemars         = "0.8.11"
serde            = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror        = "1.0.38"
semver = "1.0.4"
itertools = "0.11.0"

# dev deps
anyhow        = "1"
cw-multi-test = "0.16.5"
derivative    = "2"
test-case     = "2.2.0"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
lto              = true
panic            = 'abort'
rpath            = false
opt-level        = 3
overflow-checks  = true

[profile.release.package.mesh-vault]
codegen-units = 1
incremental   = false
