[workspace]
members = [
  "packages/*",
  "contracts/provider/*",
  "contracts/consumer/*",
  "contracts/osmosis-price-provider",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.10.0-alpha.1"
license = "MIT"
repository = "https://github.com/osmosis-labs/mesh-security"

[workspace.dependencies]
mesh-apis = { path = "./packages/apis" }
mesh-bindings = { path = "./packages/bindings" }
mesh-burn = { path = "./packages/burn" }
mesh-sync = { path = "./packages/sync" }
mesh-virtual-staking-mock = { path = "./packages/virtual-staking-mock" }

mesh-vault = { path = "./contracts/provider/vault" }
mesh-external-staking = { path = "./contracts/provider/external-staking" }
mesh-native-staking = { path = "./contracts/provider/native-staking" }
mesh-native-staking-proxy = { path = "./contracts/provider/native-staking-proxy" }

mesh-converter = { path = "./contracts/consumer/converter" }
mesh-simple-price-feed = { path = "./contracts/consumer/simple-price-feed" }
mesh-virtual-staking = { path = "./contracts/consumer/virtual-staking" }

sylvia = "0.10.1"

cosmwasm-schema = "1.5.4"
cosmwasm-std = { version = "1.5.4", features = ["ibc3", "cosmwasm_1_3"] }
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
cw2 = "1.1.2"
osmosis-std = "0.20.1"
schemars = "0.8.17"
serde = { version = "1.0.199", default-features = false, features = ["derive"] }
thiserror = "1.0.59"
semver = "1.0.22"
itertools = "0.12.1"

# dev deps
anyhow = "1"
cw-multi-test = "0.20"
derivative = "2"
test-case = "3.3.1"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
panic = 'abort'
rpath = false
opt-level = 3
overflow-checks = true

[profile.release.package.mesh-vault]
codegen-units = 1
incremental = false
