[workspace]
members = [
  "packages/*",
  "contracts/provider/*",
  "contracts/consumer/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.10.0-alpha.1"
license = "MIT"
repository = "https://github.com/osmosis-labs/mesh-security"

[workspace.dependencies]
mesh-apis = { path = "./packages/apis" }
mesh-bindings = { path = "./packages/bindings" }
mesh-burn = { path = "./packages/burn" }
mesh-price-feed = { path = "./packages/price-feed" }
mesh-sync = { path = "./packages/sync" }

mesh-vault = { path = "./contracts/provider/vault" }
mesh-external-staking = { path = "./contracts/provider/external-staking" }
mesh-native-staking = { path = "./contracts/provider/native-staking" }
mesh-native-staking-proxy = { path = "./contracts/provider/native-staking-proxy" }

mesh-converter = { path = "./contracts/consumer/converter" }
mesh-simple-price-feed = { path = "./contracts/consumer/simple-price-feed" }
mesh-virtual-staking = { path = "./contracts/consumer/virtual-staking" }

sylvia = "1.3.4"

cosmwasm-schema = "2.2.2"
cosmwasm-std = { version = "2.2.2", features = ["stargate", "cosmwasm_1_2"] }
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
cw2 = "2.0.0"
osmosis-std = "0.20.1"
prost = { version = "0.11.0",  default-features = false, features = ["prost-derive"] }
schemars = "0.8.17"
serde = { version = "1.0.199", default-features = false, features = ["derive"] }
thiserror = "1.0.59"
semver = "1.0.22"
itertools = "0.12.1"

obi = "0.0.2"
cw-band = { git = "https://github.com/bandprotocol/cw-band", rev = "14bd8d3213703a7915c6a69180e41a7ea03326ca", features = ["oracle"]}
# dev deps
anyhow = "1"
cw-multi-test = "2.2.2"
derivative = "2"
test-case = "3.3.1"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
panic = 'abort'
rpath = false
opt-level = 3
overflow-checks = true

[profile.release.package.mesh-vault]
codegen-units = 1
incremental = false
