[package]
name = "mesh-osmosis-price-provider"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
# enables generation of mt utilities
mt = ["library", "sylvia/mt"]

[dependencies]
cosmwasm-std    = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
mesh-apis       = { workspace = true }
mesh-bindings   = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
sylvia          = { workspace = true }
thiserror       = { workspace = true }
osmosis-std     = { workspace = true }
