[package]
name = "band-price-feed"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
mesh-apis        = { workspace = true }

sylvia           = { workspace = true }
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw-storage-plus  = { workspace = true }
cw2              = { workspace = true }
cw-utils         = { workspace = true }

schemars         = { workspace = true }
serde            = { workspace = true }
thiserror        = { workspace = true }
obi = "0.0.2"
cw-band = "0.1.1"

[dev-dependencies]
cw-multi-test = { workspace = true }
test-case     = { workspace = true }
derivative    = { workspace = true }
anyhow        = { workspace = true }
