[package]
name = "mesh-band-price-feed"
description = "Returns exchange rates of assets fetched from Band Protocol"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
# enables generation of mt utilities
mt = ["library", "sylvia/mt"]


[dependencies]
mesh-apis        = { workspace = true }
mesh-price-feed  = { workspace = true }

sylvia           = { workspace = true }
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw-storage-plus  = { workspace = true }
cw2              = { workspace = true }
cw-utils         = { workspace = true }

schemars         = { workspace = true }
serde            = { workspace = true }
thiserror        = { workspace = true }
obi              = { workspace = true }
cw-band          = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
test-case     = { workspace = true }
derivative    = { workspace = true }
anyhow        = { workspace = true }

[[bin]]
name = "schema"
doc  = false
