[package]
name = "mesh-native-staking"
description = "Native Staking implements LocalStaking interface, allowing native Cosmos SDK staking of collateral in a Mesh Security Vault"
version = { workspace = true }
edition = { workspace = true }
license       = { workspace = true }
repository       = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
# enables generation of mt utilities
mt = ["library", "sylvia/mt"]

[dependencies]
mesh-apis        = { workspace = true }
mesh-sync        = { workspace = true }
mesh-native-staking-proxy        = { workspace = true, features = ["library"] }

sylvia = { workspace = true }
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus  = { workspace = true }
cw2              = { workspace = true }
cw-utils         = { workspace = true }

schemars         = { workspace = true }
serde            = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
sylvia        = { workspace = true, features = ["mt"] }
cw-multi-test = { workspace = true }
test-case     = { workspace = true }
derivative    = { workspace = true }
anyhow        = { workspace = true }

mesh-vault    = { workspace = true, features = ["mt"] }

[[bin]]
name = "schema"
doc  = false
