[package]
authors = ["Band Protocol <connect@bandprotocol.com>"]
description = "Price feed contract store price data from BandChain"
edition = "2021"
name = "price-feed"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-schema = "1.1.5"
cosmwasm-std = {version = "1.1.5", features = ["ibc3"]}
cw-band = {path = "../../packages/cw-band", version = "0.1.1"}
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"
obi = "0.0.2"
serde = {version = "1.0.137", default-features = false, features = ["derive"]}
serde_json = "1.0.81"
thiserror = {version = "1.0.31"}

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.16.0"
